yaml/timber-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-test.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: timber-client
  name: timber-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: timber-client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-test.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: timber-client
    spec:
      containers:
        - image: 10.230.7.2/eserv-tst-ns/timber-client:latest
          name: timber-client
          resources: {}
      imagePullSecrets:
        - name: eserv-tst-ns-default-image-pull-secret
      restartPolicy: Always
status: {}
