yaml/timber-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: timber-api
  name: timber-api-svc
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: timber-api
status:
  loadBalancer: {}
