yaml/timber-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: timber-client
  name: timber-client-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    io.kompose.service: timber-client
status:
  loadBalancer: {}
