yaml/timber-ingressroute.yaml
#The commented out sections below are for when the application is set up for SSL
#They should be uncommented out when application is SSL enabled
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: timber-reporting-ingressroute
  namespace: timber-reporting
  #The commented out section below is for SSL redirects
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  #    nginx.ingress.kubernetes.io/rewrite-target: /
  #    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  entryPoints:
          #    - websecure
    - websecure
      #    - web
      #    - api
    #websecure is the entry point for HTTPS connections
    #    - websecure
  routes:
    - kind: Rule
      #match requests to this domain
      match: Host(`timberreporting.gov.yk.ca`)
      services:
        - name: timber-client-svc
          port: 80
          weight: 10

          #    - kind: Rule
      #match requests to this domain
      #      match: Host(`timberreporting.gov.yk.ca`) && Path(`/sockjs-node/`)
      #      services:
      #        - name: timber-client-svc
      #          port: 80
      #          weight: 10

    - kind: Rule
      #match requests to this domain
      match: PathPrefix(`/api/`)
      services:
        - name: timber-api-svc
          port: 3000
          weight: 10
  tls:
    secretName: timberreporting-tls-secret
    domains:
    - main: timberreporting.gov.yk.ca
      sans:
      - timberreporting.gov.yk.ca
